tests/common/snapshots/e2e_tests__common__visual_testing__Basic Editing__multiline.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 [No Name]*                                                                     
    1 │ Hello, World!                                                          █
    2 │ Second line                                                            █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 1, Col 11
